--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "app.ts",
-  
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
-  },
-  
+"scripts": {
+  "build": "tsc",
+  "start": "node dist/server.js",
+  "dev": "ts-node src/server.ts"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -35,7 +34,7 @@
     "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.13",
-    "@types/node": "^22.15.24",
+    "@types/node": "^22.15.32",
     "@types/pdf-parse": "^1.1.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
